# openeye.sh

./: .env  .env.development  .env.example  .env.production  .gitignore  .mcp.json  CONTRIBUTING.md  DEMO.md  Makefile  README.md  demo.sh  index.html  tailwind.config.ts
backend/: .env.example  pyproject.toml
backend/config/: openeye_debug.json5  openeye_hackathon.json5  openeye_nebius_full.json5  openeye_video.json5  openeye_vlm.json5  openeye_vlm_gemini.json5  openeye_vlm_nebius.json5  openeye_vlm_nebius_kimi.json5  openeye_vlm_openrouter.json5  openeye_yolo.json5
backend/scripts/: export_openapi.py
backend/src/: cli.py  run.py
backend/src/actions/: base.py  execution_strategies.py  orchestrator.py
backend/src/backgrounds/: __init__.py  base.py  orchestrator.py
backend/src/fleet/: __init__.py  app.py  auth_middleware.py  deps.py  exception_handlers.py  middleware.py  models.py  resource_registry.py
backend/src/fuser/: __init__.py
backend/src/governance/: __init__.py  audit.py  context.py  engine.py  loader.py  models.py  registry.py  router.py
backend/src/inputs/: __init__.py
backend/src/llm/: __init__.py  base.py  config.py  function_schemas.py  providers.py
backend/src/perception/: __init__.py  change_detector.py  grasp.py  models.py  object_builder.py  pipeline.py  positioning.py  preprocessing.py  query.py  query_executor.py  query_helpers.py  query_parser.py  relationships.py  safety.py  scene_describer.py  scene_graph.py  tracker.py
backend/src/perception_grpc/: converters.py  openeye_perception.proto  perception.proto  perception_service.py  server.py
backend/src/providers/: __init__.py  avatar_llm_state_provider.py  avatar_provider.py  config_provider.py  event_bus.py  io_provider.py  langchain_safety.py  llm_history_manager.py  nebius_safety.py  openclaw_agent.py  sleep_ticker_provider.py  tavily_provider.py  telemetry_provider.py  video_stream.py  vlm_anthropic_provider.py  vlm_gemini_provider.py  vlm_nebius_provider.py  vlm_openai_provider.py  vlm_openrouter_provider.py
backend/src/runtime/: conditions.py  config.py  config_watcher.py  cortex.py  cortex_lifecycle.py  cortex_loop.py  env.py  hook.py  loader.py  logging.py  manager.py  models.py  orchestrator_lifecycle.py  schema.py  serializer.py  state.py  state_store.py  transition_evaluator.py  transitions.py  version.py
backend/src/simulators/: __init__.py  base.py  orchestrator.py
backend/tests/: conftest.py  test_detection_processor.py  test_device_agent.py  test_fleet_routes.py  test_fleet_services.py  test_io_provider.py  test_providers_factory.py  test_runtime_config.py  test_sleep_ticker_provider.py  test_websim_decomposed.py
backend/tests/integration/: conftest.py  test_fleet_e2e.py  test_v1_api_e2e.py
cli/: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
cli/openeye_ai/: __init__.py  _backend.py  _cli_helpers.py  cli.py  config.py  constants.py  fleet_cli.py  models.yaml  registry.py  schema.py
cli/openeye_ai/adapters/: base.py  depth_anything.py  grounding_dino.py  onnx_runtime.py  rfdetr.py  sam2.py  smolvla.py  tensorrt_runtime.py  yolo26.py  yolov8.py  yolov8_onnx.py
cli/openeye_ai/agent/: __init__.py  loop.py
cli/openeye_ai/commands/: agent_cli.py  api_cli.py  config.py  demo.py  desktop.py  docs.py  governance.py  governance_client.py  inference.py  mlops.py  models.py  models_list.py  models_pull.py  models_registry.py  models_remove.py  robotics.py  server_cli.py
cli/openeye_ai/configs/: g1_safety_guardian.yaml
cli/openeye_ai/connectors/: unitree_g1.py
cli/openeye_ai/debug/: __init__.py  analyzer.py  diff_engine.py  prompts.py
cli/openeye_ai/demos/: _vlm_helpers.py  _vlm_runners.py  audio.py  display.py  g1_safety_demo.py  visualization.py  vlm_openrouter_demo.py
cli/openeye_ai/desktop/: __init__.py  prompts.py  schema.py
cli/openeye_ai/fleet_cli/: __init__.py  _helpers.py  agent.py  deployments.py  devices.py  groups.py
cli/openeye_ai/mcp/: __init__.py  server.py  tools.py
cli/openeye_ai/memory/: __init__.py  store.py
cli/openeye_ai/mlops/: __init__.py  ab_testing.py  api.py  batch_inference.py  batch_jobs.py  batch_orchestration.py  batch_results.py  benchmark_matrix.py  evaluation.py  export.py  export_coreml.py  export_onnx.py  export_tensorrt.py  export_utils.py  feedback.py  lifecycle.py  lineage.py  model_registry.py  persistence.py  retraining.py  schemas.py  shadow_mode.py  validation.py
cli/openeye_ai/robotics/: __init__.py  _pipeline_bridge.py  client.py  config.py  types.py  vision.py
cli/openeye_ai/server/: agent_router.py  agentic_session.py  app.py  dashboard.html  demo_data.py  metrics.py  middleware.py  queue.py  rate_limit.py  state.py  ws_utils.py
cli/openeye_ai/utils/: benchmark.py  camera.py  checksum.py  custom_adapter.py  download.py  hardware.py  registry_update.py  safety_helpers.py  screen_capture.py  unitree_camera.py  validation.py  visualize.py
cli/openeye_ai/vlm/: __init__.py  nebius.py
cli/tests/: conftest.py  test_adapter_base.py  test_adapters.py  test_agent_cli.py  test_agent_loop.py  test_agent_router.py  test_api_cli.py  test_benchmark.py  test_checksum.py  test_cli_commands.py  test_config.py  test_custom_adapter.py  test_download.py  test_fleet_agent.py  test_g1_connector.py  test_governance.py  test_governance_cli.py  test_hardware.py  test_install_setup.py  test_memory_store.py  test_metrics.py  test_mlops_ab_testing.py  test_mlops_batch_inference.py  test_mlops_benchmark_matrix.py  test_mlops_commands.py  test_mlops_evaluation.py  test_mlops_export.py  test_mlops_feedback.py  test_mlops_lifecycle.py  test_mlops_lineage.py  test_mlops_model_registry.py  test_mlops_modules.py  test_mlops_persistence.py  test_mlops_retraining.py  test_mlops_schemas.py  test_mlops_shadow_mode.py  test_mlops_validation.py  test_queue.py  test_rate_limit.py  test_registry.py  (+8 more)
cli/tests/e2e/: conftest.py  test_pull_run_pipeline.py
cli/tests/fleet/: conftest.py  test_alerts.py  test_command_queue.py  test_deployments.py  test_devices.py  test_groups.py  (+1 more)
integrations/ros2/: package.xml  setup.py
(+738 files in other folders)
