[project]
name = "openeye-perception"
version = "0.1.0"
description = "OpenEye Perception Engine - OM1-derived vision/VLM pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3",
    "json5>=0.10.0",
    "jsonschema>=4.23.0",
    "anthropic>=0.40.0",
    "openai>=1.60.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.15.0",
    "opencv-python>=4.11.0",
    "numpy>=2.0.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "websockets>=13.1",
    "nest-asyncio>=1.6.0",
    "faiss-cpu>=1.7.4",
    "pydantic>=2.0.0",
    "aiohttp>=3.13.0",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "supabase>=2.0.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "tavily-python>=0.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
