<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openeye_ros2_bridge</name>
  <version>0.1.0</version>
  <description>OpenEye perception bridge for ROS2</description>
  <maintainer email="team@perceptify.dev">OpenEye Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
